last day with chirper

--- a/week5/chirper2/templates/base.html
+++ b/week5/chirper2/templates/base.html
@@ -13,7 +13,7 @@
     </style>
   <body>
     <div class="contatiner">
-      <a href="{% url 'index_view' %}">Home</a>
+      <a href="{% url 'chirp_view' %}">Home</a>
       <a href="{% url 'about_view' %}">About me</a>
       <a href="{% url 'chirp_Create_view' %}">Create Chirp</a>
 
