--- a/week5/chirper2/templates/chirps.html
+++ b/week5/chirper2/templates/chirps.html
@@ -5,7 +5,21 @@
 <div class="panel panel-default">
   <div class="panel body">
     <a href="{% url 'chirp_detail_view' chirp.id %}"> {{ chirp.body }} </a>
-
+    <p>
+      {{ chirp.user }}
+    </p>
+    <p>
+      <form class="" action="{% url 'chirp_upvote_view' chirp.id %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="value" value="true">
+        <input type="submit" name="name" value="upboat">
+      </form>
+      <form class="" action="{% url 'chirp_downvote_view' chirp.id %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="value" value="false">
+        <input type="submit" name="name" value="downboat">
+      </form>
+    </p>
   </div>
 
 </div>
