--- a/week8/coffeehouse/templates/menu/special_list.html
+++ b/week8/coffeehouse/templates/menu/special_list.html
@@ -5,8 +5,15 @@
 
 {% for special in object_list %}
   <div class="">
-      {{ special.title }}
+    <a href="{% url 'special_update_view' special.id %}">
+
+      <img src="{{ MEDIA_URL }} {{special.image_url }}" alt="Picture of {{ special.piture }}" />
+    </a>
   </div>
+  <div class="">
+    {{ special.title }}
+  </div>
+
   <div class="">
     {{ special.description }}
   </div>
