--- a/week8/coffeehouse/templates/menu/special_list.html
+++ b/week8/coffeehouse/templates/menu/special_list.html
@@ -2,21 +2,14 @@
 
 {% block content %}
 <h1>Current Specials: </h1>
+<input type="button"  value="refresh" id="refresh_button">
+<div class="data-container">
 
+</div>
+{% comment %}
 {% for special in object_list %}
-  <div class="">
-    <a href="{% url 'special_update_view' special.id %}">
 
-      <img src="{{ MEDIA_URL }} {{special.image_url }}" alt="Picture of {{ special.piture }}" />
-    </a>
-  </div>
-  <div class="">
-    {{ special.title }}
-  </div>
-
-  <div class="">
-    {{ special.description }}
-  </div>
-  <br>
 {% endfor %}
+{% endcomment %}
+
 {% endblock %}
